fix box-shadow on Swift side bar as it had a gap

--- a/css/sass/_swift.scss
+++ b/css/sass/_swift.scss
@@ -24,7 +24,7 @@
 
     }
 
-    .block--side, .topFilters, .filtered-header, .boxin{
+    .ticket-filters, .topFilters, .filtered-header {
         box-shadow: 0 4px 10px 1px rgba(238,238,239,.75);
     }
 
